# KonFoo

./: .buildinfo  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  genindex.html  index.html  make.bat  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: environment.pickle  genindex.doctree  index.doctree
_modules/: index.html
_sources/: index.rst.txt
_static/: array.csv  container.ini  documentation_options.js  pointer.ini  structure.ini
annex/: changelog.html  contributing.html  license.html
api/: index.html
artwork/: logo.xcf
assets/: logo.xcf
binder/: requirements.txt
bytestream/: deserializing.html  reading.html  writing.html
containers/: array.html  sequence.html  structure.html
content/: concept.html  containers.html  fields.html  intro.html  mapper.html
docs/: Makefile  api.rst  array.rst  arrays.rst  changelog.rst  concept.rst  conf.py  containers.rst  decoding.rst  deserializing.rst  encoding.rst  enum.rst  fields.rst  foo.ini  genindex.rst  index.rst  license.rst  loading.rst  make.bat  pointer.rst  pointers.rst  provider.rst  providers.rst  quickstart.rst  reading.rst  saving.rst  sequence.rst  serializing.rst  structure.rst  structures.rst  templates.rst  upgrading.rst  writing.rst
konfoo/: __init__.py  categories.py  core.py  decorators.py  enums.py  exceptions.py  fields.py  globals.py  options.py  pointers.py  providers.py  utils.py
notebooks/: Array.ipynb  Bipolar field.ipynb  Bit field.ipynb  Bitset field.ipynb  Bool field.ipynb  Byte field.ipynb  Char field.ipynb  Datetime field.ipynb  Decimal field.ipynb  Enum field.ipynb  Float field.ipynb  Fraction field.ipynb  IPv4Address field.ipynb  Pointer field.ipynb  (+10 more)
(+125 files in other folders)
