[metadata]
name = KonFoo
description = A declarative byte stream mapping engine.
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: konfoo.__version__
keywords =
  binary data
  deserialize
  serialize
  parse
  decode
  encode
  unpack
  pack
url = https://github.com/JoeVirtual/KonFoo/
download_url = https://github.com/JoeVirtual/KonFoo/zipball/master#egg=konfoo-dev
author = Jochen Gerhaeusser
author_email = jochen_privat@gmx.de
# maintainer =
# maintainer_email =
license = BSD-3-Clause
license_files = LICENSE
platforms = any
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Environment :: Web Environment
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Software Development
  Topic :: Software Development :: Embedded Systems
  Topic :: Software Development :: Testing
  Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
  Topic :: Scientific/Engineering :: Visualization
project_urls =
  Issue Tracker = https://github.com/JoeVirtual/KonFoo/issues/
  Documentation = https://konfoo.readthedocs.io
  Source Code =  https://github.com/JoeVirtual/KonFoo

[options]
packages = find:
package_dir = = src
python_requires = >= 3.6
tests_require=
  pytest
include_package_data = True
zip_safe = False

[options.packages.find]
where = src
